--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
-theme: jekyll-theme-minimal
+collections:
+  team_members:
+    people: true
+
+plugins:
+  - jekyll-include-cache
+
+minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+
+
+remote_theme: "mmistakes/minimal-mistakes@4.14.1"
